--- a/.travis.yml
+++ b/.travis.yml
@@ -46,14 +46,14 @@ matrix:
       addons:
           apt:
               sources: *all_sources
-              packages: ['clang-5.0']
+              packages: ['clang-5.0', 'libstdc++-8-dev']
       env: MATRIX_EVAL="CC=clang-5.0 && CXX=clang++-5.0 && COVERAGE=Off"
     - os: linux
       compiler: clang
       addons:
           apt:
               sources: *all_sources
-              packages: ['clang-6.0']
+              packages: ['clang-6.0', 'libstdc++-8-dev']
       env: MATRIX_EVAL="CC=clang-6.0 && CXX=clang++-6.0 && COVERAGE=Off"  
     - os: osx
       compiler: clang
