--- a/benchmarks/CMakeLists.txt
+++ b/benchmarks/CMakeLists.txt
@@ -8,6 +8,7 @@ target_link_libraries(index_perftest
   QMX
   simdcomp
   ParallelSTL
+  GSL
   )
 
 add_executable(perftest_interpolative perftest_interpolative.cpp)
@@ -17,6 +18,7 @@ target_link_libraries(perftest_interpolative
   FastPFor
   QMX
   simdcomp
+  GSL
   )
 
 add_executable(selective_queries selective_queries.cpp)
@@ -29,6 +31,7 @@ target_link_libraries(selective_queries
   QMX
   simdcomp
   ParallelSTL
+  GSL
   )
 
 add_executable(scan_perftest scan_perftest.cpp)
@@ -36,4 +39,5 @@ target_link_libraries(scan_perftest
   Boost::boost
   mio
   ParallelSTL
+  GSL
   )
