--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -9,6 +9,7 @@ target_link_libraries(create_freq_index
   CLI11
   mio
   ParallelSTL
+  GSL
   )
 
 add_executable(optimal_hybrid_index optimal_hybrid_index.cpp)
@@ -22,6 +23,7 @@ target_link_libraries(optimal_hybrid_index
   ${STXXL_LIBRARIES}
   mio
   ParallelSTL
+  GSL
 )
 set_target_properties(optimal_hybrid_index PROPERTIES
             CXX_STANDARD 14
@@ -35,6 +37,7 @@ target_link_libraries(create_wand_data
   CLI11
   mio
   ParallelSTL
+  GSL
   )
 
 add_executable(queries queries.cpp)
@@ -48,6 +51,7 @@ target_link_libraries(queries
   CLI11
   mio
   ParallelSTL
+  GSL
   )
 
 
@@ -61,6 +65,7 @@ target_link_libraries(profile_queries
   simdcomp
   mio
   ParallelSTL
+  GSL
   )
 
 add_executable(profile_decoding profile_decoding.cpp)
@@ -73,6 +78,7 @@ target_link_libraries(profile_decoding
   simdcomp
   mio
   ParallelSTL
+  GSL
   )
 
 add_executable(shuffle_docids shuffle_docids.cpp)
@@ -85,6 +91,7 @@ target_link_libraries(shuffle_docids
   simdcomp
   mio
   ParallelSTL
+  GSL
   )
 
 add_executable(recursive_graph_bisection recursive_graph_bisection.cpp)
@@ -94,6 +101,7 @@ target_link_libraries(recursive_graph_bisection
   QMX
   ParallelSTL
   mio
+  GSL
 )
 
 add_executable(evaluate_collection_ordering evaluate_collection_ordering.cpp)
@@ -106,4 +114,42 @@ target_link_libraries(evaluate_collection_ordering
   simdcomp
   mio
   ParallelSTL
+  GSL
   )
+
+add_executable(parse_collection parse_collection.cpp)
+target_link_libraries(parse_collection
+  Boost::boost
+  Boost::filesystem
+  CLI11
+  mio
+  ParallelSTL
+  GSL
+  gumbo::gumbo
+  Porter2
+  warcpp
+  )
+target_compile_features(parse_collection PRIVATE cxx_std_17)
+
+add_executable(invert invert.cpp)
+target_link_libraries(invert
+  Boost::boost
+  Boost::filesystem
+  CLI11
+  mio
+  ParallelSTL
+  GSL
+  gumbo::gumbo
+  )
+target_compile_features(invert PRIVATE cxx_std_17)
+
+add_executable(read_collection read_collection.cpp)
+target_link_libraries(read_collection
+  ${Boost_LIBRARIES}
+  CLI11
+  mio
+  ParallelSTL
+  GSL
+  gumbo::gumbo
+  )
+target_compile_features(parse_collection PRIVATE cxx_std_17)
