--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -9,6 +9,7 @@ foreach(TEST_SRC ${TEST_SOURCES})
     QMX
     mio
     ParallelSTL
+    GSL
     Catch2
     )
   add_test(${TEST_SRC_NAME} ${TEST_SRC_NAME})
@@ -51,6 +52,28 @@ target_link_libraries(test_forward_index
     MaskedVByte
     simdcomp
     ParallelSTL
+)
+
+target_compile_features(test_forward_index_builder PRIVATE cxx_std_17)
+target_link_libraries(test_forward_index_builder
+    ParallelSTL
+    gumbo::gumbo
+    Boost::filesystem
+    Porter2
+    warcpp
+)
+
+target_compile_features(test_invert PRIVATE cxx_std_17)
+target_link_libraries(test_invert
+    ParallelSTL
+    Boost::filesystem
+)
+
+target_compile_features(test_html PRIVATE cxx_std_17)
+target_link_libraries(test_html
+    gumbo::gumbo
+    Boost::filesystem
+    Porter2
 )
 
 file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/test_data DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
