--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 sudo: require
 language: cpp
-dist: trusty
+dist: xenial
 
 branches:
   only:
@@ -8,9 +8,8 @@ branches:
 
 common_sources: &all_sources
   - ubuntu-toolchain-r-test
-  - llvm-toolchain-trusty
-  - llvm-toolchain-trusty-5.0
-  - llvm-toolchain-trusty-6.0
+  - llvm-toolchain-xenial
+  - llvm-toolchain-xenial-6.0
 
 env:
   global:
@@ -54,12 +53,12 @@ matrix:
           apt:
               sources: *all_sources
               packages: ['clang-6.0', 'libstdc++-8-dev']
-      env: MATRIX_EVAL="CC=clang-6.0 && CXX=clang++-6.0 && COVERAGE=Off"  
+      env: MATRIX_EVAL="CC=clang-6.0 && CXX=clang++-6.0 && COVERAGE=Off"
     - os: osx
-      osx_image: xcode10.1	
+      osx_image: xcode10.1
       compiler: clang
       env: MATRIX_EVAL="CC=clang && CXX=clang++ && COVERAGE=Off"
-      
+
 # Install dependencies
 before_install:
   - eval "${MATRIX_EVAL}"
