--- a/external/CMakeLists.txt
+++ b/external/CMakeLists.txt
@@ -93,3 +93,5 @@ add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/Porter2)
 # Add warcpp
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/warcpp)
 
+# Add spdlog
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/spdlog)
