--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,5 @@
 sudo: require
 language: cpp
-dist: trusty
 
 branches:
   only:
@@ -8,9 +7,8 @@ branches:
 
 common_sources: &all_sources
   - ubuntu-toolchain-r-test
-  - llvm-toolchain-trusty
-  - llvm-toolchain-trusty-5.0
-  - llvm-toolchain-trusty-6.0
+  - llvm-toolchain-xenial
+  - llvm-toolchain-xenial-6.0
 
 env:
   global:
@@ -26,6 +24,7 @@ cache:
 matrix:
   include:
     - os: linux
+      dist: xenial
       compiler: gcc
       addons: &gcc7
         apt:
@@ -35,6 +34,7 @@ matrix:
             - lcov
       env: MATRIX_EVAL="CC=gcc-7 && CXX=g++-7 && COVERAGE=On"
     - os: linux
+      dist: xenial
       compiler: gcc
       addons: &gcc8
         apt:
@@ -42,6 +42,7 @@ matrix:
           packages: ['g++-8']
       env: MATRIX_EVAL="CC=gcc-8 && CXX=g++-8 && COVERAGE=Off"
     - os: linux
+      dist: xenial
       compiler: clang
       addons:
           apt:
@@ -49,17 +50,18 @@ matrix:
               packages: ['clang-5.0', 'libstdc++-7-dev']
       env: MATRIX_EVAL="CC=clang-5.0 && CXX=clang++-5.0 && COVERAGE=Off"
     - os: linux
+      dist: xenial
       compiler: clang
       addons:
           apt:
               sources: *all_sources
               packages: ['clang-6.0', 'libstdc++-8-dev']
-      env: MATRIX_EVAL="CC=clang-6.0 && CXX=clang++-6.0 && COVERAGE=Off"  
+      env: MATRIX_EVAL="CC=clang-6.0 && CXX=clang++-6.0 && COVERAGE=Off"
     - os: osx
-      osx_image: xcode10.1	
+      osx_image: xcode10.1
       compiler: clang
       env: MATRIX_EVAL="CC=clang && CXX=clang++ && COVERAGE=Off"
-      
+
 # Install dependencies
 before_install:
   - eval "${MATRIX_EVAL}"
