--- a/.travis.yml
+++ b/.travis.yml
@@ -12,14 +12,11 @@ common_sources: &all_sources
 
 env:
   global:
-    - DEPS_DIR=${TRAVIS_BUILD_DIR}/deps
     - CODECOV_TOKEN="e3f86b6b-0770-4816-9b7d-19b0c550229f"
 
 
 cache:
-  directories:
-    - ${DEPS_DIR}
-
+  apt: true
 
 matrix:
   include:
