Revert "Created Cmake folder"
This reverts commit 24ed5d3a14fe2c5cfe79f4fc195bd5ecfe180347.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,6 @@ set(CMAKE_CXX_EXTENSIONS OFF)
 
 option(PISA_ENABLE_TESTING "Enable testing of the library." ON)
 option(PISA_ENABLE_BENCHMARKING "Enable benchmarking of the library." ON)
-option(PISA_COMPILE_HEADERS "Test pisa header files for self-sufficiency: try to compile them." OFF)
 
 configure_file(
   ${DS2I_SOURCE_DIR}/include/pisa/ds2i_config.hpp.in
@@ -40,8 +39,6 @@ set_property(TARGET gumbo::gumbo APPEND PROPERTY IMPORTED_LOCATION
     ${CMAKE_BINARY_DIR}/gumbo-parser/lib/libgumbo.a)
 add_dependencies( gumbo::gumbo gumbo-external )
 
-
-list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
 
 # Add code coverage
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/external/CMake-codecov/cmake")
@@ -109,4 +106,48 @@ if (PISA_ENABLE_BENCHMARKING)
   add_subdirectory(benchmarks)
 endif()
 
-include(cmake/)
+
+option(PISA_COMPILE_HEADERS "Test pisa header files for self-sufficiency: try to compile them." OFF)
+if(PISA_COMPILE_HEADERS)
+  get_property(dirs TARGET pisa PROPERTY INTERFACE_INCLUDE_DIRECTORIES)
+  list(APPEND inc_dirs ${dirs})
+  get_property(libs TARGET pisa PROPERTY INTERFACE_LINK_LIBRARIES)
+  foreach(lib ${libs})
+    get_property(type TARGET ${lib} PROPERTY TYPE)
+    if(type STREQUAL "INTERFACE_LIBRARY")
+      get_property(dirs TARGET ${lib} PROPERTY INTERFACE_INCLUDE_DIRECTORIES)
+      list(APPEND inc_dirs ${dirs})
+    else ()
+      get_property(dirs TARGET ${lib} PROPERTY INCLUDE_DIRECTORIES)
+      list(APPEND inc_dirs ${dirs})
+    endif()
+  endforeach()
+
+  include(CheckCXXSourceCompiles)
+  set(CMAKE_REQUIRED_FLAGS "${CMAKE_CXX_FLAGS} -std=c++${CMAKE_CXX_STANDARD} -c")
+  get_property(dirs TARGET pisa PROPERTY INTERFACE_INCLUDE_DIRECTORIES)
+  set(CMAKE_REQUIRED_INCLUDES "${CMAKE_SOURCE_DIR}/external/tbb/include" ${inc_dirs})
+
+  file(GLOB_RECURSE header_files FOLLOW_SYMLINKS "include/pisa/*.hpp")
+  list(SORT header_files)
+
+  foreach(file ${header_files})
+    # replace / to _ to fix warnings
+    string(REPLACE "/" "_" compilename "${file}")
+    string(REPLACE "." "_" compilename "${compilename}")
+
+    if(NOT IsSelfContained${compilename})
+      unset(IsSelfContained${compilename} CACHE)
+    endif()
+
+    check_cxx_source_compiles(
+      "#include \"${file}\"
+      int main() { return 0; }" IsSelfContained${compilename})
+
+    if(NOT IsSelfContained${compilename})
+      message(FATAL_ERROR
+        "Compilation FAILED for ${file}\nCompiler output:\n${OUTPUT}")
+    endif()
+  endforeach()
+
+endif(PISA_COMPILE_HEADERS)
