--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -107,31 +107,30 @@ if (PISA_ENABLE_BENCHMARKING)
 endif()
 
 
-option(PISA_COMPILE_HEADERS "Test pisa header files for self-sufficiency: try to compile them." OFF)
 if(PISA_COMPILE_HEADERS)
-  get_property(dirs TARGET pisa PROPERTY INTERFACE_INCLUDE_DIRECTORIES)
-  list(APPEND inc_dirs ${dirs})
-  get_property(libs TARGET pisa PROPERTY INTERFACE_LINK_LIBRARIES)
-  foreach(lib ${libs})
-    get_property(type TARGET ${lib} PROPERTY TYPE)
-    if(type STREQUAL "INTERFACE_LIBRARY")
-      get_property(dirs TARGET ${lib} PROPERTY INTERFACE_INCLUDE_DIRECTORIES)
-      list(APPEND inc_dirs ${dirs})
+  get_property(PISA_INTERFACE_INCLUDE_DIRECTORIES TARGET pisa PROPERTY INTERFACE_INCLUDE_DIRECTORIES)
+  list(APPEND PISA_INCLUDE_DIRECTORIES ${PISA_INTERFACE_INCLUDE_DIRECTORIES})
+  get_property(PISA_INTERFACE_LINK_LIBRARIES TARGET pisa PROPERTY INTERFACE_LINK_LIBRARIES)
+  foreach(PISA_INTERFACE_LINK_LIBRARY ${PISA_INTERFACE_LINK_LIBRARIES})
+    get_property(PISA_INTERFACE_LINK_LIBRARY_TYPE TARGET ${PISA_INTERFACE_LINK_LIBRARY} PROPERTY TYPE)
+    if(PISA_INTERFACE_LINK_LIBRARY_TYPE STREQUAL "INTERFACE_LIBRARY")
+      get_property(PISA_INTERFACE_INCLUDE_DIRECTORIES TARGET ${PISA_INTERFACE_LINK_LIBRARY} PROPERTY INTERFACE_INCLUDE_DIRECTORIES)
+      list(APPEND PISA_INCLUDE_DIRECTORIES ${PISA_INTERFACE_INCLUDE_DIRECTORIES})
     else ()
-      get_property(dirs TARGET ${lib} PROPERTY INCLUDE_DIRECTORIES)
-      list(APPEND inc_dirs ${dirs})
+      get_property(PISA_INTERFACE_INCLUDE_DIRECTORIES TARGET ${PISA_INTERFACE_LINK_LIBRARY} PROPERTY INCLUDE_DIRECTORIES)
+      list(APPEND PISA_INCLUDE_DIRECTORIES ${PISA_INTERFACE_INCLUDE_DIRECTORIES})
     endif()
   endforeach()
 
   include(CheckCXXSourceCompiles)
   set(CMAKE_REQUIRED_FLAGS "${CMAKE_CXX_FLAGS} -std=c++${CMAKE_CXX_STANDARD} -c")
-  get_property(dirs TARGET pisa PROPERTY INTERFACE_INCLUDE_DIRECTORIES)
-  set(CMAKE_REQUIRED_INCLUDES "${CMAKE_SOURCE_DIR}/external/tbb/include" ${inc_dirs})
+  get_property(PISA_INTERFACE_INCLUDE_DIRECTORIES TARGET pisa PROPERTY INTERFACE_INCLUDE_DIRECTORIES)
+  set(CMAKE_REQUIRED_INCLUDES "${CMAKE_SOURCE_DIR}/external/tbb/include" ${PISA_INCLUDE_DIRECTORIES})
 
-  file(GLOB_RECURSE header_files FOLLOW_SYMLINKS "include/pisa/*.hpp")
-  list(SORT header_files)
+  file(GLOB_RECURSE PISA_HEADER_FILES FOLLOW_SYMLINKS "include/pisa/*.hpp")
+  list(SORT PISA_HEADER_FILES)
 
-  foreach(file ${header_files})
+  foreach(file ${PISA_HEADER_FILES})
     # replace / to _ to fix warnings
     string(REPLACE "/" "_" compilename "${file}")
     string(REPLACE "." "_" compilename "${compilename}")
