--- a/.travis.yml
+++ b/.travis.yml
@@ -67,7 +67,7 @@ script:
     - mkdir build
     - cd build
     - cmake -DCMAKE_BUILD_TYPE=Debug -DENABLE_COVERAGE=${COVERAGE} ${CMAKE_OPTIONS} ..
-    - make
+    - make -j
     - ctest
 
 after_success:
