--- a/.travis.yml
+++ b/.travis.yml
@@ -67,8 +67,8 @@ script:
     - mkdir build
     - cd build
     - cmake -DCMAKE_BUILD_TYPE=Debug -DENABLE_COVERAGE=${COVERAGE} ${CMAKE_OPTIONS} ..
-    - make -j
-    - ctest
+    - make -j 2
+    - ctest -j 2
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
