--- a/.travis.yml
+++ b/.travis.yml
@@ -16,10 +16,10 @@ env:
 
 
 cache:
-  apt: true
-  directories:
-    - ${TRAVIS_BUILD_DIR}/build/external
   - ccache
+  - apt: true
+  - directories:
+    - ${TRAVIS_BUILD_DIR}/build/external
   
 matrix:
   fast_finish: true
