--- a/.travis.yml
+++ b/.travis.yml
@@ -81,8 +81,10 @@ before_install:
 script:
     - cd build
     - cmake -DCMAKE_BUILD_TYPE=Debug -DENABLE_COVERAGE=${COVERAGE} -DPISA_COMPILE_HEADERS=${PISA_COMPILE_HEADERS} ${CMAKE_OPTIONS} ..
-    - make
-    - ctest
+    - if [[ "$PISA_COMPILE_HEADERS" != "On" ]]; then 
+        make -j2;
+        ctest -j2;
+      fi
 
 after_success:
   - if [[ "${COVERAGE}" == "On" ]]; then 
