--- a/.travis.yml
+++ b/.travis.yml
@@ -63,6 +63,21 @@ matrix:
               sources: *all_sources
               packages: ['clang-6.0', 'libstdc++-8-dev']
       env: MATRIX_EVAL="CC=clang-6.0 && CXX=clang++-6.0 && COVERAGE=Off"
+    - os: linux
+      dist: xenial
+      compiler: clang
+      addons:
+          apt:
+              sources: *all_sources
+              packages: ['clang-6.0', 'libstdc++-8-dev']
+      env: MATRIX_EVAL="CC=clang-6.0 && CXX=clang++-6.0 && COVERAGE=Off"
+      script:
+          - mkdir build
+          - cd build
+          - cmake -DCMAKE_EXPORT_COMPILE_COMMANDS=ON ..
+          - cp ../script/remove-submodules.py .
+          - python remove-submodules.py
+          - run-clang-tidy.py -header-filter=".*include/pisa/.*hpp"
     - os: osx
       osx_image: xcode10.1
       compiler: clang
