--- a/.travis.yml
+++ b/.travis.yml
@@ -83,7 +83,7 @@ script:
     - cmake -DCMAKE_BUILD_TYPE=Debug -DENABLE_COVERAGE=${COVERAGE} -DPISA_COMPILE_HEADERS=${PISA_COMPILE_HEADERS} ${CMAKE_OPTIONS} ..
     - if [[ "$PISA_COMPILE_HEADERS" != "On" ]]; then 
         make -j2;
-        ctest -j2;
+        travis_wait 120 ctest -j2;
       fi
 
 after_success:
