--- a/.travis.yml
+++ b/.travis.yml
@@ -68,7 +68,7 @@ matrix:
     - os: osx
       osx_image: xcode10.1
       compiler: clang
-      env: MATRIX_EVAL="CC=clang && CXX=clang++ && COVERAGE=On"
+      env: MATRIX_EVAL="CC=clang && CXX=clang++ && COVERAGE=Off"
 
 # Install dependencies
 before_install:
