--- a/.travis.yml
+++ b/.travis.yml
@@ -32,7 +32,7 @@ matrix:
           packages:
             - g++-7
             - lcov
-      env: MATRIX_EVAL="CC=gcc-7 && CXX=g++-7 && COVERAGE=Off"
+      env: MATRIX_EVAL="CC=gcc-7 && CXX=g++-7 && COVERAGE=On"
     - os: linux
       dist: xenial
       compiler: gcc
