--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ branches:
 common_sources: &all_sources
   - ubuntu-toolchain-r-test
   - llvm-toolchain-xenial-6.0
-  - llvm-toolchain-xenial-8.0
+  - llvm-toolchain-xenial-8
 
 env:
   global:
@@ -64,7 +64,7 @@ matrix:
       addons:
           apt:
               sources: *all_sources
-              packages: ['libstdc++-7-dev']
+              packages: ['clang-8.0', 'libstdc++-7-dev']
       env: MATRIX_EVAL="CC=clang-8.0 && CXX=clang++-8.0 && COVERAGE=Off"
     - os: osx
       osx_image: xcode10.1
