Adapt `invert` for CLI testing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -128,7 +128,10 @@ if(PISA_COMPILE_HEADERS)
   include(CheckCXXSourceCompiles)
   set(CMAKE_REQUIRED_FLAGS "${CMAKE_CXX_FLAGS} -std=c++${CMAKE_CXX_STANDARD} -c")
   get_property(PISA_INTERFACE_INCLUDE_DIRECTORIES TARGET pisa PROPERTY INTERFACE_INCLUDE_DIRECTORIES)
-  set(CMAKE_REQUIRED_INCLUDES "${CMAKE_SOURCE_DIR}/external/tbb/include" ${PISA_INCLUDE_DIRECTORIES})
+  set(CMAKE_REQUIRED_INCLUDES
+      "${CMAKE_SOURCE_DIR}/external/CLI11/include"
+      "${CMAKE_SOURCE_DIR}/external/tbb/include"
+      ${PISA_INCLUDE_DIRECTORIES})
 
   file(GLOB_RECURSE PISA_HEADER_FILES FOLLOW_SYMLINKS "include/pisa/*.hpp")
   list(SORT PISA_HEADER_FILES)
