Sharding forward index (#106)

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -82,6 +82,12 @@ target_link_libraries(read_collection
   CLI11
 )
 
+add_executable(partition_fwd_index partition_fwd_index.cpp)
+target_link_libraries(partition_fwd_index
+  pisa
+  CLI11
+)
+
 add_executable(compute_intersection compute_intersection.cpp)
 target_link_libraries(compute_intersection
   pisa
