--- a/external/CMakeLists.txt
+++ b/external/CMakeLists.txt
@@ -102,6 +102,10 @@ add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/warcpp)
 set(TRECPP_ENABLE_TESTING OFF CACHE BOOL "skip trecpp testing")
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/trecpp)
 
+# Add trecpp
+set(WAPOPP_ENABLE_TESTING OFF CACHE BOOL "skip wapopp testing")
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/wapopp)
+
 # Add fmt
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/fmt)
 
