--- a/.gitmodules
+++ b/.gitmodules
@@ -67,3 +67,6 @@
 [submodule "external/wapopp"]
 	path = external/wapopp
 	url = https://github.com/pisa-engine/wapopp.git
+[submodule "external/Tokenizer"]
+	path = external/Tokenizer
+	url = https://github.com/OpenNMT/Tokenizer.git
