--- a/.travis.yml
+++ b/.travis.yml
@@ -82,6 +82,7 @@ script:
     - cd build
     - cmake -DCMAKE_BUILD_TYPE=Debug -DENABLE_COVERAGE=${COVERAGE} -DPISA_COMPILE_HEADERS=${PISA_COMPILE_HEADERS} ${CMAKE_OPTIONS} ..
     - if [[ "$PISA_COMPILE_HEADERS" != "On" ]]; then 
+        travis_wait 30 sleep 1800 &;
         make;
         ctest -j2;
       fi
