--- a/.travis.yml
+++ b/.travis.yml
@@ -79,11 +79,10 @@ before_install:
   - eval "${MATRIX_EVAL}"
 
 script:
-    - travis_wait 50 sleep 3000 &
     - cd build
     - cmake -DCMAKE_BUILD_TYPE=Debug -DENABLE_COVERAGE=${COVERAGE} -DPISA_COMPILE_HEADERS=${PISA_COMPILE_HEADERS} ${CMAKE_OPTIONS} ..
     - if [[ "$PISA_COMPILE_HEADERS" != "On" ]]; then 
-        make;
+        travis_wait 50 make;
         ctest -j2;
       fi
 
